# ArchimedesPalimsestITK

./: CMakeLists.txt  NOTICE  README
CMake/: ArchimedesPalimsestITKExternalData.cmake
Data/099v-101r/: 099v-101r_Arch51v_Heiberg_ultraviolet_stitch.jpg.md5  099v-101r_Arch51v_Heiberg_ultraviolet_stitch.tif.md5  099v-101r_Arch51v_Heiberg_visible_stitch.jpg.md5  099v-101r_Arch51v_Heiberg_visible_stitch.tif.md5  099v-101r_Arch51v_Sinar_LED365_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED365_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED445_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED445_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED470_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED470_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED505_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED505_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED530_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED530_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED570_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED570_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED617_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED617_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED625_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED625_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED700_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED700_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED735_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED735_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_LED870_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_LED870_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_RAKBLL_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_RAKBLL_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_RAKBLR_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_RAKBLR_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_RAKIRL_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_RAKIRL_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_RAKIRR_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_RAKIRR_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_TNGSTN_01_pack8.jpg.md5  099v-101r_Arch51v_Sinar_TNGSTN_01_pack8.tif.md5  099v-101r_Arch51v_Sinar_pseudo_no-veil.jpg.md5  099v-101r_Arch51v_Sinar_pseudo_no-veil.tif.md5  099v-101r_Arch51v_Sinar_pseudo_sharpie.jpg.md5  099v-101r_Arch51v_Sinar_pseudo_sharpie.tif.md5  (+6 more)
Source/: CMakeLists.txt  ImageDisplay.cxx  ImageReadWrite.cxx  ImageShow.cxx  QuickView.cxx  RGBImageReadWrite.cxx  vtkInteractorStyleImageCursor.h
Testing/: CMakeLists.txt  ExtractRegionOfInterestTest.cxx
